# wen-fastmcp

./: LICENSE  README.md  README_CN.md  main.py  main_old.py  pyproject.toml
examples/: prompt_example.py  sse_client_example.py  stdio_client_example.py
src/: __init__.py  app.py  auth.py  server.py
src/prompts/: __init__.py
src/resources/: __init__.py
src/tools/: __init__.py
tests/: conftest.py  test_auth.py  test_mcp.py  test_server.py
